# speech-habit-lens

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.streamlit/: config.toml
docs/: design.md
docs/case-studies/: 4-pitches-comparison.md
docs/knowledge/: README.md  amivoice-api-reference.md  amivoice-esas.md  amivoice-overview.md
docs/setup/: amivoice-api-key.md
examples/: .gitignore  CREDITS.md
prompts/: _version.md  acoustic_layer.md  cross_layer.md  text_layer.md
src/speech_habit_lens/: analyze.py  cli.py  esas.py  recognize.py  report.py  webui.py
tools/: fetch_speech.sh
