[project]
name = "speech-habit-lens"
version = "0.1.0"
description = "1分間スピーチの癖を AmiVoice ESAS × LLM で可視化する CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ken imoto" }]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.scripts]
shl = "speech_habit_lens.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
